--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /.metadata/
 SportsMatching/src/main/java/SportsMatching/DBConnection.java
+Servers/.project
+SportsMatching/src/main/java/SportsMatching/DBConnection.java
