--- a/SportsMatching/.project
+++ b/SportsMatching/.project
@@ -28,4 +28,11 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/main/webapp/images/rankingimage.jpg</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/images/rankingimage.jpg</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
